--- a/pipelines/pipelinesrun/signed/pipelinerun-signed.yaml
+++ b/pipelines/pipelinesrun/signed/pipelinerun-signed.yaml
@@ -15,7 +15,7 @@ spec:
     - name: IMAGE
       value: 'quay.io/szemmour/pipelines-vote-api:signed'
     - name: namespace
-      value: demo
+      value: poi-demo
   pipelineRef:
     name: build-and-deploy-signed
   serviceAccountName: pipeline
