--- a/pipelines/pipelinesrun/unsigned/pipelinerun-unsigned.yaml
+++ b/pipelines/pipelinesrun/unsigned/pipelinerun-unsigned.yaml
@@ -13,7 +13,7 @@ spec:
     - name: git-revision
       value: master
     - name: IMAGE
-      value: 'quay.io/szemmour/pipelines-vote-api:unsigned'
+      value: 'quay.io/skraft/poi:unsigned'
     - name: namespace
       value: poi-demo
   pipelineRef:
