--- a/pipelines/tasks/apply-unsigned.yaml
+++ b/pipelines/tasks/apply-unsigned.yaml
@@ -10,6 +10,8 @@ spec:
       description: The directory in source that contains yaml manifests
       type: string
       default: "https://raw.githubusercontent.com/skraft-redhat/acs-cosgin-integration/main/app/deployment-signed.yaml"
+    - name: namespace
+      type: string
   steps:
     - name: apply
       image: image-registry.openshift-image-registry.svc:5000/openshift/cli:latest
@@ -18,5 +20,5 @@ spec:
       args:
         - |-
           echo Applying manifests in $(inputs.params.manifest_dir) directory
-          oc create -f $(inputs.params.manifest_dir) -n demo
+          oc create -f $(inputs.params.manifest_dir) -n $(params.namespace)
           echo -----------------------------------
