--- a/pipelines/pipeline/unsigned/unsigned.yaml
+++ b/pipelines/pipeline/unsigned/unsigned.yaml
@@ -71,6 +71,9 @@ spec:
     workspaces:
     - name: source
       workspace: shared-workspace
+    params:
+    - name: namespace
+      type: $(params.namespace)
   # - name: update-deployment
   #   taskRef:
   #     name: update-deployment
