--- a/pipelines/pipeline/signed/signed.yaml
+++ b/pipelines/pipeline/signed/signed.yaml
@@ -88,4 +88,4 @@ spec:
       workspace: shared-workspace
     params:
     - name: namespace
-      type: $(params.namespace)
+      value: $(params.namespace)
