--- a/pipelines/pipeline/unsigned/unsigned.yaml
+++ b/pipelines/pipeline/unsigned/unsigned.yaml
@@ -73,7 +73,7 @@ spec:
       workspace: shared-workspace
     params:
     - name: namespace
-      type: $(params.namespace)
+      value: $(params.namespace)
   # - name: update-deployment
   #   taskRef:
   #     name: update-deployment
