--- a/pipelines/tasks/apply-manifest.yaml
+++ b/pipelines/tasks/apply-manifest.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: apply-manifest-signed
+  name: apply-manifest
 spec:
   workspaces:
   - name: source
@@ -9,7 +9,7 @@ spec:
     - name: manifest_dir
       description: The directory in source that contains yaml manifests
       type: string
-      default: "https://raw.githubusercontent.com/skraft-redhat/acs-cosgin-integration/main/app/deployment-signed.yaml"
+      default: "https://raw.githubusercontent.com/skraft-redhat/acs-cosgin-integration/main/app/deployment.yaml"
     - name: namespace
       type: string
   steps:
