--- a/pipelines/tasks/apply-manifest-signed.yaml
+++ b/pipelines/tasks/apply-manifest-signed.yaml
@@ -1,7 +1,7 @@
 apiVersion: tekton.dev/v1beta1
 kind: Task
 metadata:
-  name: apply-manifest
+  name: apply-manifest-signed
 spec:
   workspaces:
   - name: source
