--- a/pipelines/pipeline/unsecured/unsecured.yaml
+++ b/pipelines/pipeline/unsecured/unsecured.yaml
@@ -51,7 +51,7 @@ spec:
     runAfter:
     - fetch-repository
   finally:
-  - name: apply-manifest
+  - name: apply-manifest-unsigned
     taskRef:
       name: apply-manifest
     workspaces:
