--- a/pipelines/pipeline/unsecured/unsecured.yaml
+++ b/pipelines/pipeline/unsecured/unsecured.yaml
@@ -9,6 +9,7 @@ spec:
   - name: git-url
     type: string
     description: url of the git repo for the code of deployment
+    default: https://github.com/openshift/pipelines-vote-api.git
   - name: git-revision
     type: string
     description: revision to be used from repo of the code for deployment
