--- a/pipelines/pipeline/signed/signed.yaml
+++ b/pipelines/pipeline/signed/signed.yaml
@@ -8,6 +8,7 @@ spec:
   params:
   - name: git-url
     type: string
+    default: https://github.com/openshift/pipelines-vote-api.git
     description: url of the git repo for the code of deployment
   - name: git-revision
     type: string
