--- a/prep/pipelinerun-unsigned.yaml
+++ b/prep/pipelinerun-unsigned.yaml
@@ -6,18 +6,12 @@ metadata:
     tekton.dev/pipeline: build-and-deploy-unsigned
 spec:
   params:
-    - name: deployment-name
-      value: pipelines-vote-api
-    - name: git-url
-      value: 'https://github.com/openshift/pipelines-vote-api.git'
     - name: git-revision
       value: master
     - name: IMAGE
-      value: 'quay.io/skraft/poi:unsigned'
-    - name: namespace
-      value: poi-demo
+      value: 'quay.io/skraft/cosign-acs:base'
   pipelineRef:
-    name: build-and-deploy-unsigned
+    name: build-and-deploy-unsecured
   serviceAccountName: pipeline
   timeout: 1h0m0s
   workspaces:
