--- a/prep/kustomization.yaml
+++ b/prep/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
+- unsecured.yaml
 - pvc.yaml
 - cosign.yaml
 - rhacs-image-check.yaml
+- pipelinerun-unsigned.yaml
